refractor: fixed gap in center-content

--- a/src/index.css
+++ b/src/index.css
@@ -175,88 +175,8 @@ ul {
   text-transform: uppercase;
 }
 
-/*
-.btn-hipster {
-  color: var(--primary-500);
-  background: var(--primary-200);
-}
-.btn-hipster:hover {
-  color: var(--primary-200);
-  background: var(--primary-700);
-} */
-
 .btn-block {
   width: 100%;
-}
-
-/* alerts */
-.alert {
-  padding: 0.375rem 0.75rem;
-  margin-bottom: 1rem;
-  border-color: transparent;
-  border-radius: var(--borderRadius);
-}
-
-.alert-danger {
-  color: var(--red-dark);
-  background: var(--red-light);
-}
-
-.alert-success {
-  color: var(--green-dark);
-  background: var(--green-light);
-}
-
-.form {
-  width: 90vw;
-  max-width: var(--fixedWidth);
-  background: var(--white);
-  border-radius: var(--borderRadius);
-  box-shadow: var(--shadow-2);
-  padding: 2rem 2.5rem;
-  margin: 3rem auto;
-}
-
-.form-label {
-  display: block;
-  font-size: var(--smallText);
-  margin-bottom: 0.5rem;
-  text-transform: capitalize;
-  letter-spacing: var(--letterSpacing);
-}
-
-.form-input,
-.form-textarea {
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  border-radius: var(--borderRadius);
-  background: var(--backgroundColor);
-  border: 1px solid var(--grey-200);
-  outline: none;
-}
-
-.form-input:focus,
-.form-textarea:focus {
-  border: 0.25rem solid var(--primary-500);
-}
-
-.form-row {
-  margin-bottom: 1rem;
-}
-
-.form-textarea {
-  height: 7rem;
-}
-
-::placeholder {
-  font-family: inherit;
-  color: var(--grey-400);
-}
-
-.form-alert {
-  color: var(--red-dark);
-  letter-spacing: var(--letterSpacing);
-  text-transform: capitalize;
 }
 
 .loading {
@@ -415,7 +335,7 @@ ul {
 .inline-block-items {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.75rem;
 }
 
 .para-last-line {
@@ -423,6 +343,7 @@ ul {
   color: var(--grey-500);
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
   font-weight: 500;
 }
 
@@ -431,7 +352,7 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 0.75rem;
   overflow: hidden;
 }
 
@@ -488,7 +409,6 @@ ul {
     gap: 0;
     justify-content: space-between;
     align-items: center;
-    /* border: 2px solid black; */
   }
 
   .star {
